appId: ${APP_ID || 'io.horizontalsystems.bankwallet.dev'}
---
- tapOn: "Securely back up.*"
- tapOn: "Disabling your smartphone.*"
- tapOn: "The app doesn't spy.*"
- tapOn: "We do not hold your assets.*"
- tapOn: "As part of its monetization.*"
- tapOn: "Blockchain transactions are irreversible.*"
- scrollUntilVisible:
    element:
      text: "The app is verifiably open source.*"
- tapOn: "The app is verifiably open source.*"
- scrollUntilVisible:
    element:
      text: "You are solely responsible.*"
- tapOn: "You are solely responsible.*"
- scrollUntilVisible:
    element:
      text: "By proceeding.*"
- tapOn: "By proceeding.*"
- tapOn: "Next"
