appId: io.horizontalsystems.bankwallet.dev
---
# Intro slides
- assertVisible: "Unchain Assets"
- tapOn: "Next"

- assertVisible: "Go Borderless"
- tapOn: "Next"

- assertVisible: "Stay Private"
- tapOn: "Next"
