appId: ${APP_ID || 'io.horizontalsystems.bankwallet.dev'}
---
- tapOn: "Next"
- tapOn: "Next"
- tapOn: "Next"
